# WordfeudHelper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_and_run.sh  main.cpp  read_board.py
include/: board.h  calculations.h  permutations.h
src/: board.cpp  calculations.cpp  permutations.cpp
tests/: test_main.cpp
